# my-things

./: .gitignore  AGENTS.md  Justfile  main.py  main.tcss  pyproject.toml
lib/: config.py  db.py
lib/screens/: add_game.py  comments_editor.py  confirm.py  games.py  index.py
lib/widgets/: text_area.py
plans/: 001_add_initial_database.md  002_create_initial_list_index_page.md  003_add_games_list.md  004_add_game_to_list.md  005_add_games_list_edit_modal.md
specs/: 001_add_initial_database.md  002_create_inital_list_index_page.md  003_add_games_list.md  004_add_game_to_list.md  005_add_games_list_edit_modal.md
tests/: test_add_game.py  test_app.py  test_config.py  test_db.py  test_games.py
